# LJEngine

./: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glew-2.1.0/: glew.pc
lib/glfw-3.3.2/examples/: particles.c  splitview.c
lib/glfw-3.3.2/include/GLFW/: glfw3.h  glfw3native.h
lib/glfw-3.3.2/src/: internal.h  mappings.h  vulkan.c  win32_window.c
lib/glfw-3.3.2/tests/: events.c  icon.c  iconify.c  opacity.c  reopen.c
src/: Game.cpp  Game.h  main.cpp
src/Display/: WindowHandler.cpp  WindowHandler.h
src/Manager/: KeyHandler.cpp  KeyHandler.h  ResourceManager.cpp  ResourceManager.h  SceneLoader.cpp  SceneLoader.h
src/Manager/ScriptManager/: LuaReflection.cpp  LuaReflection.h  ScriptRegistrations.cpp  ScriptRegistrations.h
src/Renderer/: Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h
src/Scene/: Scene.cpp  Scene.h
src/Scene/Objects/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  RigidBody.cpp  RigidBody.h  Sprite2D.cpp  Sprite2D.h
src/Scene/Objects/Collision/: Collision.cpp  Collision.h
